fix JDK 8